--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -284,6 +284,31 @@ section.application {
 				}
 			}
 		}
+
+		.response-rates{
+			display: flex;
+
+			div{
+				display: flex;
+				flex: 1;
+				padding: .5em 1em;
+				background-color: $color-1;
+				color: $white;
+
+				span{
+					margin: auto;
+					text-align: center;
+				}
+			}
+
+			div:nth-child(1){
+				margin: 0 1em 1em 0;
+			}
+
+			div:nth-child(2){
+				margin: 0 0 1em 1em;
+			}
+		}
 	}
 
   .data-panel{
