--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -44,6 +44,65 @@ $lg: new-breakpoint(min-width 1024px);
 	height: calc(100vh - 5em);
 	position: relative;
 	overflow: hidden;
+
+	.sc-gauge{
+		display: none;
+	}
+
+	.sc-gauge.active  { 
+		display: block;
+		position: absolute;
+		z-index: 5;
+		width:12em; 
+		padding: 1em;
+		background-color: $color-1; 
+		color: $white;
+
+		button{
+			position: absolute;
+			right: .5em;
+			top: .5em;
+			padding: .45em .8em .6em .8em;
+			background-color: $color-4;
+			color: $white;
+		}
+
+		.sc-background { 
+			position:relative; 
+			height:100px; 
+			margin-bottom:10px; 
+			background-color:#fff; 
+			border-radius:150px 150px 0 0; 
+			overflow:hidden; 
+			text-align:center; }
+		.sc-mask { 
+			position:absolute; 
+			top:20px; right:20px; 
+			left:20px; 
+			height:80px; 
+			background-color:$color-1; 
+			border-radius:150px 150px 0 0 }
+		.sc-percentage { 
+			position:absolute; 
+			top:100px; 
+			left:-200%; 
+			width:400%; 
+			height:400%; 
+			margin-left:100px; 
+			background-color:$color-2; }
+		.sc-percentage { 
+			transform:rotate(158deg); 
+			transform-origin:top center; }
+		.sc-min { float:left; }
+		.sc-max { float:right; }
+		.sc-value { 
+			position:absolute; 
+			top:50%; 
+			left:0; 
+			width:100%;  
+			font-size:48px; 
+			font-weight:700 }
+	}
 }
 #alert-overlay, #drill-down-overlay, #initial-loader-overlay{
 	display: none;
