--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -91,8 +91,9 @@ $lg: new-breakpoint(min-width 1024px);
 			margin-left:100px; 
 			background-color:$color-2; }
 		.sc-percentage { 
-			transform:rotate(158deg); 
-			transform-origin:top center; }
+			transform:rotate(0deg); 
+			transform-origin:top center; 
+			transition: all 1s ease-in-out;}
 		.sc-min { float:left; }
 		.sc-max { float:right; }
 		.sc-value { 
