--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -94,6 +94,13 @@ $lg: new-breakpoint(min-width 1024px);
 			transform:rotate(0deg); 
 			transform-origin:top center; 
 			transition: all 1s ease-in-out;}
+		.sc-title{
+			position: absolute;
+			bottom: 1.5em;
+			width: 60%;
+			font-size: .8em;
+			left: 3.5em;
+		}
 		.sc-min { float:left; }
 		.sc-max { float:right; }
 		.sc-value { 
